--- a/style.css
+++ b/style.css
@@ -1,127 +1,616 @@
+/* default css*/
 *{
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  
 }
-
-body{
-  font-family: Arial, Helvetica, sans-serif;
-  
-  
-}
-
-
-.hamburger-menu{
-  
-  position: relative;
-}
-
-.menu-items{
-  
-  padding-top: 85px;
-  padding-left: 20px;
-  transform: translateX(-115%);
-  transition: transform .3s ease-in-out;
-  background: #232323;
-  margin-top: -15px;
- margin-left: -10px;
- width: 250px;
- max-height: 90%;
-  
-  
-}
-
-.hamburger-menu input[type="checkbox"]{
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  top: 20px;
-  left: 10px;
+.clearfix::after{
+  content: '';
   display: block;
-  z-index: 5;
-  opacity: 0;
+  clear: both;
+}
+
+
+
+
+
+/*header css*/
+
+
+
+.header{
+  position: relative;
+  background: linear-gradient(rgba(0,0,0, .5), rgba(0,0,0, .5)) , url(1s.jpg);
+  height: 95vh;
+  /* width: 500px; */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+  
+  
+}
+
+ 
+ .logo{
+   float: left;
+   color: #f4f4f4;
+   padding: 12px;
+   font-size: 50px;
+   letter-spacing: 2px;
+   
+   
+ }
+ .nav .nav-items{
+   float: right;
+   list-style: none;
+   
+   
+ }
+
+.nav .nav-item{
+  display: inline-block;
+  padding: 5px;
+  margin-top: 25px;
+  
+}
+
+.nav .nav-item a{
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 10px;
+  padding-bottom: 1.5px;
+}
+
+.nav .nav-items .nav-item a:hover{
+  border-bottom: 1px solid #fff;
+}
+
+
+
+
+
+/* ####### header-conteinar #####
+ */
+
+
+.header-conteinar{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  background: linear-gradient(rgba(0.0.0, .2), rgba(0,0,0, .2));
+  
+}
+.header-conteinar .head1{
+  text-transform: uppercase;
+  color: #f4f4f4;
+  font-size: 30px;
+  letter-spacing: 2px;
+  margin-bottom: 9px; 
+
+}
+.header-conteinar p{
+  text-transform: uppercase;
+  color: #f4f4f4;
+  font-size: 10px;
+  letter-spacing: 2px;
+  margin-bottom: 20px; 
+  
+  
+}
+.header-conteinar .btn{
+  color: #e63946;
+  background: #f4f4f4;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 8px 15px;
+  display: inline-block;
+  border-radius: 100px;
+  letter-spacing: 2px;
+  font-size: 10px;
+  
+}
+
+.header-conteinar .btn:hover{
+  background: #ddd;
+}
+
+
+
+
+
+
+
+
+/* ######## showcase css ####### */
+
+
+
+.showcase{
+  background: #ddd;
+  padding: 75px 20px;
+  
+}
+
+
+.row{
+  height: 250px;
+  background: #fff;
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,.4);
+  
+}
+
+.row1{
+  margin-bottom: 50px;
+  
+  
+}
+
+.row1 .img-box, .row2 .text-box{
+  float: left;
+  width: 50%;
+  
+  
+  
+}
+
+.row2 .img-box, .row1 .text-box{
+  float: right;
+  width: 50%;
+  
+}
+
+.row .img-box{
+
+  height: 100%;
+}
+
+.row .text-box{
+  
+  height: 100%;
+  padding: 10px;
+  
+}
+
+.row .img-box img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.row .text-box .btn{
+  text-decoration: none;
+  color: #e63946;
+  padding: 6px 6px;
+ 
+  display: inline-block;
+  border: 1px solid red;
+  border-radius: 100px;
+  margin-top: 15px;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 2px;
+  margin-left: 20px;
+  
+  
+  
+}
+
+
+.row .text-box .btn:hover{
+  background: #fcf3f2;
+}
+
+.row .text-box h2{
+  padding-bottom: 10px;
+  padding-top: 7px;
+  color: #333333;
+}
+.row .text-box p{
+  font-size: 14px;
+  color: #555555;
+  
+}
+
+
+
+
+
+
+/* ######## freture css ######## */
+
+
+
+
+
+.freture{
+  
+ padding: 75px 15px;
+  
+}
+
+.box-wrapper{
+ 
+ box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, .24);
+}
+
+.box-wrapper i{
+  font-size: 17px;
+}
+
+
+.freture .box{
+  width: 33.333%;
+  float: left;
+  text-align: center;
+}
+  
+  
+
+.freture .box1{
+  
+  background: #263238;
+  padding: 10px ;
+  color: #ddd;
+  
+}
+.freture .box2{
+ background: linear-gradient(25deg, #d64c7f, #ee4758 50%);
+ padding: 10px ;
+ color: #ddd;
+}
+.freture .box3{
+
+  background: #263238;
+  padding: 10px ;
+  color: #ddd;
+  
+}
+.freture .box h2{
+  font-size: 20px;
+  padding: 18px 0;
+  margin-left: -7px;
+  
+}
+.freture .box p{
+  font-size: 15px;
+  margin-bottom: 7px;
+  
+}
+
+
+/*################ footer css #########*/
+
+
+.footer{
+  padding: 40px;
+  background: #263238;
+  color: white;
+  text-align: center;
+  
+}
+
+.footer .social-menu{
+  
+  font-size: 25px;
+  
+  
+}
+
+.social-menu i{
+  padding: 10px;
+}
+
+.footer p{
+  font-size: 13px;
+  letter-spacing: 1px;
+}
+
+
+
+
+/* ########## about css ########### */
+
+
+
+
+.nav{
+  background: #263238;
+  
+  
+}
+
+
+.about h1{
+  text-transform: uppercase;
+  padding: 40px 12px;
+  letter-spacing: 1px;
+  color: #263238;
+  
+  
+  
+}
+
+.about h1::after{
+  content: '';
+  width: 97%;
+  color: #e63946;
+  display: block;
+  border: 2px solid #e63946;
+  
+  
+}
+
+
+.p1 p{
+  padding: 0 12px;
+  margin-top: -21px;
+  text-transform: capitalize;
+  color: #263238;
+  letter-spacing: 1px;
+  
 } 
 
-.hamburger-items .line{
+
+
+.tron{
   
-  display: block;
-  height: 4px;
-  width: 100%;
-  background: #232323;
-  border-radius: 10px;
-  
+  padding: 30px 10px;
   
 }
 
-
-
-.hamburger-items{
-  position: absolute;
-  top: 20px;
-  left: 10px;
-  width: 30px;
-  height: 30px;
-  color: #ccc;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  
-  
-}
-
-li{
+.tron ul{
   list-style: none;
-  padding-bottom: 30px;
-  font-size: 17px;
   
+}
+.tron li{
+  text-transform: capitalize;
+  padding: 10px;
+  font-size: 15px;
+  color: #263438;
+}
+
+.tron li::before{
+  content: ' \2713';
+  color: #e63946;
+  padding: 7px;
+}
+
+.tron .left1{
   
+  float: left;
+  width: 50%;
+}
+
+.tron .right5{
+  float: right;
+  width: 50%;
   
 }
 
 
 
-.hamburger-items .line .line1{
+.counts{
+  /* border: 5px solid black; */
   
-  transform-origin: 0% 0%;
-  transition: transform .3s ease-in-out;
+}
+.counts .count-items{
+  float: left;
+  width: 25%;
+  /* border: 2px solid red; */
+  text-align: center;
+  
   
 }
 
-.hamburger-items .line .line3{
+.count-items h1{
+  color: #e63946;
   
-  transform-origin: 0% 100%;
-  transition: transform .3s ease-in-out;
+}
+.count-items span{
+  color: #555;
+  padding-top: 5px;
+  display: block;
+  letter-spacing: 1px;
+  font-size: 14px;
+  
 }
 
 
-.hamburger-menu input[type="checkbox"]:checked ~  .hamburger-items .line1{
-  
-  transform: rotate(45deg);
-}
-  
-.hamburger-menu input[type="checkbox"]:checked ~  .hamburger-items .line2{
-  display: none;
-}
-  
-  
-.hamburger-menu input[type="checkbox"]:checked ~  .hamburger-items .line3{
-  
-  transform: rotate(-45deg);
-  
-}
-  
-  
 
-
-
-.hamburger-menu input[type="checkbox"]:checked ~  .menu-items{
+.jambu{
+  /* border: 6px solid black; */
+  padding: 30px 0;
   
+  background: linear-gradient(25deg, #d64c7f, #ee4758 50%);
   
-  transform: translateX(0%);
   color: #fff;
+  margin-top: 20px;
+  box-shadow: 5px 5px 20px 0px rgba(0, 0, 0,  .34);
+  
 }
 
-.hamburger-menu input[type="checkbox"]:checked ~ .hamburger-items .line{
+.jambu .finis{
+  /* float: left;
+  width: 50%; */
   
-  background: #fff;
+  
+}
+.jambu .para{
+  float: left;
+  width: 60%;
+  
+  margin-top: 15px;
+  font-size: 13px;
+  letter-spacing: 1px;
+  
+}
+
+
+
+.jambu .fom{
+  float: right;
+  width: 40%;
+  border: 2px solid #fff;
+  
+  
+}
+.jambu .fom .btn{
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  padding: 15px 0px;
+  font-size: 17px;
+  text-transform: uppercase;
+  
+}
+
+
+
+
+/* ############ contact page css ####### */
+
+
+
+.contact-wrapper{
+  padding: 30px 12px;
+  background: #f4f4f4;
+  
+  
+}
+.contact-wrapper .jambu-wrapper{
+  
+}
+
+.jambu-wrapper .address-form{
+  float: left;
+  width: 48%;
+  
+  
+  
+}
+.address-item{
+ margin-bottom: 25px;
+ 
+}
+
+.jambu-wrapper .item1 h2{
+  color: #555;
+}
+
+
+.jambu-wrapper .item2 h2{
+  color: #555;
+}
+
+.jambu-wrapper .item3 h2{
+  color: #555;
+}
+
+.jambu-wrapper .item1 p{
+  color: #555;
+}
+
+.jambu-wrapper .item2 p{
+  color: #555;
+}
+
+.jambu-wrapper .item3 p{
+  color: #555;
+}
+
+
+.address-item i, h2{
+  display: inline-block;
+  padding-right: 6px;
+  
+  
+}
+.address-item i{
+  color: #e63946;
+  
+}
+.address-item  h2, p{
+  color: #f4f4f4;
+  
+}
+
+.address-form img{
+ width: 99%;
+ object-fit: cover;
+ height: 150px;
+  
+  
+  
+}
+
+
+.jambu-wrapper .form-wrapper{
+  float: right;
+  width: 48%;
+/*   border: 2px dotted red; */
+  height: 400px;
+  
+  
+}
+
+
+
+.form-wrapper .mm{
+  
+  letter-spacing: 1px;
+  color: #555;
+  text-align: center;
+  
+}
+
+.form-wrapper .mm::after{
+  content: '';
+  width: 100%;
+  border: 2px solid #e63946;
+  display: block;
+  
+}
+
+.form-wrapper p{
+  color: #555;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  margin-top: 15px;
+  
+}
+
+.form-wrapper  h4{
+  margin-top: 15px;
+  color: #e63946;
+  
+  
+}
+.form-wrapper #ff{
+  max-width: 100%;
+  border-radius: 5px;
+  border: 1px solid white;
+  
+}
+
+.form-wrapper .btn{
+  display: block;
+  padding: 2px 10px;
+  margin-top: 15px;
+  margin-left: 42px;
+  background: #e63946;
+  color: #f4f4f4;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  border-radius: 5px;
+  border: 1px solid white;
+  
+  
+  
+  
+  
 }
